add configurator
